# fastgrpc

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
examples/: simple-example.py
examples/advanced_example/: client.py  server.py
examples/fastgrpc-simple-example/: Makefile  README.md  pyproject.toml
examples/fastgrpc-simple-example/fastgrpc_simple_example/: client.py  server.py
examples/fastgrpc-simple-example/protos/: calculator.proto
fastgrpc/: __init__.py  __main__.py  fastgrpc.py
